<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_notify"
        android:title="@string/string_notify"
        android:icon="@drawable/ic_notifications"
        />
    <item android:id="@+id/item_playlist"
        android:title="@string/string_play_list"
        android:icon="@drawable/ic_queue_music"/>
    <item android:id="@+id/item_my_song"
        android:title="@string/string_my_song"
        android:icon="@drawable/ic_my_music"/>

    <item android:title="@string/string_help">
        <menu>
            <item android:id="@+id/item_settings"
                android:title="@string/string_settings"
                android:icon="@drawable/ic_settings"/>
            <item android:id="@+id/item_report"
                android:title="@string/string_report"
                android:icon="@drawable/ic_bug_report"/>
        </menu>
    </item>
</menu>